infra/workload-app/dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workload-app
    app.kubernetes.io/instance: workload-app
    app.kubernetes.io/name: workload-app
    release: kube-prometheus-stack
  name: workload-app
  namespace: default
spec:
#   replicas: 1
  selector:
    matchLabels:
      app: workload-app
      app.kubernetes.io/instance: workload-app
      app.kubernetes.io/name: workload-app
      release: kube-prometheus-stack
  template:
    metadata:
      labels:
        app: workload-app
        app.kubernetes.io/instance: workload-app
        app.kubernetes.io/name: workload-app
        release: kube-prometheus-stack
    spec:
      containers:
      - image: ghcr.io/j-kokoszka/workload-app:latest
        imagePullPolicy: Always
        name: workload-app
        resources:
          limits:
            cpu: 200m
            memory: 100M
          requests:
            cpu: 200m
            memory: 100M
        readinessProbe:
          httpGet:
            path: /metrics    # The endpoint that should return 200
            port: 8080        # Replace with your app's actual listening port
          initialDelaySeconds: 5  # How long to wait before the first check
          periodSeconds: 5        # How often to check
          successThreshold: 1     # Minimum consecutive successes to be considered ready
          failureThreshold: 3     # How many times to fail before marking unready
