infra/workload-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workload-app
  name: workload-app-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: workload-app
  type: ClusterIP
